fixed the cut off text

--- a/Frontend/src/components/Visualization/src/bar.css
+++ b/Frontend/src/components/Visualization/src/bar.css
@@ -11,6 +11,7 @@ fill:#3088cb;
     font-family:inherit;
     font-weight: 500;
     stroke-width: 1.75;
+    margin-bottom: 200px;
 }
 
 .y-axis {
